--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -33,4 +33,5 @@ jobs:
     - name: Run stitch_job.py
       run: |
        python -m pip install --upgrade pip
+       python pip install requests
        python .github/workflows/stitch_job.py 
