--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -35,3 +35,9 @@ jobs:
        python -m pip install --upgrade pip
        pip install requests
        python .github/workflows/stitch_job.py 
+       
+    - name: Run dbt.py
+      run: |
+       python .github/workflows/dbt.py
+       
+       
