--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -13,7 +13,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
-  
+  schedule:
+  - cron: "17 6 * * *"
+    
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
