--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -19,36 +19,36 @@ on:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  deployment:
+  build:
     runs-on: ubuntu-latest
-    environment: 
-      name: production
-      url: https://github.com
-
+    environment: deployment
+    concurrency: deployment
     steps:
-    - uses: actions/checkout@v2
+      - name: deploy
+        # ...deployment-specific steps
+
 
     # Install Python and pip
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.7'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+         python-version: '3.7'
 
    #Install dependecies andrun stitch_job.py
-    - name: Run stitch_job.py
-      run: |
-       python -m pip install --upgrade pip
-       pip install requests
-       python .github/workflows/stitch_job.py
+      - name: Run stitch_job.py
+        run: |
+         python -m pip install --upgrade pip
+         pip install requests
+         python .github/workflows/stitch_job.py
        
-    - name: Run dbt.py
-      run: |
-       python .github/workflows/dbt.py         
+      - name: Run dbt.py
+        run: |
+         python .github/workflows/dbt.py         
        
-    - name: Run power_bi.py
-      run: |
-       pip install msal
-       python .github/workflows/power_bi.py       
+      - name: Run power_bi.py
+        run: |
+         pip install msal
+         python .github/workflows/power_bi.py       
        
     
        
